# prospector

./: .gitignore  ARCHITECTURE.md  CALCULATIONS.md  Makefile  README.md  benchmark_components.py  benchmark_kafka_parallel.py  benchmark_kafka_sink.py  benchmark_throughput.py  data_generator.py  docker-compose.yml  models.py  prospector.py  pyproject.toml  risk_api.py  risk_calculator.py  throughput_benchmark_20250703_211313.json
prospector/api/: __init__.py
prospector/api/core/: dependencies.py  exceptions.py  startup.py
prospector/api/routers/: advisor.py  analytics.py  health.py  portfolio.py  portfolios.py  risk.py  streaming.py
prospector/config/: constants.py  securities.py
prospector/core/: calculations.py  risk_processor.py
prospector/streaming/: pipeline.py
prospector/utils/: performance.py
