[project]
name = "prospector-risk-calculator"
version = "1.0.0"
description = "Prospector - Real-time portfolio risk calculator using Bytewax stream processing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Evan Volgas", email = "evan.volgas@gmail.com"}
]
keywords = ["prospector", "streaming", "kafka", "risk", "portfolio", "finance"]

dependencies = [
    "bytewax>=0.21.1",
    "confluent-kafka>=2.11.0",
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "faker>=20.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.5.0",
    "docker>=6.0.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
]

[project.scripts]
prospector = "prospector:main"
risk-calculator = "risk_calculator:main"
data-generator = "data_generator:main"
benchmark-monitor = "benchmark_monitor:main"
performance-dashboard = "performance_dashboard:main"
benchmark-throughput = "benchmark_throughput:main"
benchmark-fast = "benchmark_throughput_fast:main"
risk-api = "risk_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["risk_calculator", "risk_api", "data_generator", "models"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

# UV-specific configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
]